@@ -27,15 +27,15 @@
 
 libmandir = $(LIB_MAN_DIR)
 
-libman_SOURCES = XF86Misc.man
+libman_PRE = XF86Misc.man
 
 BUILT_SOURCES = shadows.DONE
 
-EXTRA_DIST = $(libman_SOURCES)
+EXTRA_DIST = $(libman_PRE)
 
 CLEANFILES = $(libman_DATA) $(BUILT_SOURCES)
 
-libman_DATA = $(libman_SOURCES:man=@LIB_MAN_SUFFIX@) \
+libman_DATA = $(libman_PRE:man=@LIB_MAN_SUFFIX@) \
 	      $(XF86Misc_shadows:=.@LIB_MAN_SUFFIX@)
 
 SED = sed
